# doubao-ime-win

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build.rs  config.toml  config.toml.example
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
examples/: audio_test.rs  floating_demo.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: backend.css  main.ts  style.css
scripts/: build-portable.ps1  build-release.ps1  check-repository-allowlist.ps1  find-unused-dependencies.ps1
src/: lib.rs  main.rs  startup.rs
src/asr/: client.rs  constants.rs  device.rs  mod.rs  protocol.rs
src/audio/: aec.rs  capture.rs  encoder.rs  mod.rs  processor.rs  resampler.rs
src/business/: context_capture.rs  hotkey_manager.rs  mod.rs  punctuation.rs  text_inserter.rs  voice_controller.rs  voice_session.rs
src/cloud/: lexicon.rs  mod.rs  ner.rs  rich_chat.rs  sse.rs
src/data/: config.rs  mod.rs
src/ui/: floating_button.rs  mod.rs  polish_window.rs  settings_window.rs  system_tray.rs
