[package]
name = "doubao-voice-input"
version = "1.2.10"
edition = "2021"
authors = ["Doubao Voice Input Team"]
description = "Windows voice input tool using Doubao ASR"
license = "MIT"
repository = "https://github.com/d4renk/doubao-ime-win"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for device registration
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "native-tls"] }

# WebSocket client
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }

# Audio capture
cpal = "0.15"
rubato = { version = "0.16.2", default-features = false }
sonora = "0.1.0"

# Opus encoding (with pre-built binaries)
opus = "0.3"

# Protobuf
prost = "0.12"

# Global hotkey
global-hotkey = "0.5"

# System tray
tray-icon = "0.14"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.9.5"

# Hex encoding
hex = "0.4"

# MD5 hashing (for x-ss-stub header)
md5 = "0.7"

# Image for tray icon
image = { version = "0.25.10", default-features = false, features = ["png"] }

# Windows API
[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
wasapi = "0.23.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "doubao-voice-input"
path = "src/main.rs"
