[package]
name = "doubao-voice-input"
version = "1.2.14"
edition = "2021"
authors = ["Doubao Voice Input Team"]
description = "Windows voice input tool using Doubao ASR"
license = "MIT"
repository = "https://github.com/d4renk/doubao-ime-win"

[dependencies]
# Async runtime
tokio = { version = "1.35", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client for device registration
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls-no-provider"] }

# WebSocket client
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }

# Audio capture
cpal = "0.18.1"
rubato = { version = "0.16.2", default-features = false }
sonora = "0.1.0"

# Opus encoding (with pre-built binaries)
opus = "0.3"

# Protobuf
prost = "0.12"

# Global hotkey
global-hotkey = "0.5"

# System tray
tray-icon = "0.14"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.9.5"

# Hex encoding
hex = "0.4"

# MD5 hashing (for x-ss-stub header)
md5 = "0.7"

tao = "0.35.3"
wry = { version = "0.55.1", default-features = false, features = ["protocol", "transparent"] }
rust-embed = "8.12.0"
mime_guess = "2.0"

# Windows API
[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
wasapi = "0.23.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Ole",
] }

[build-dependencies]
prost-build = "0.12"

[profile.dev]
debug = 1
incremental = false

[profile.dev.package."*"]
debug = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "doubao-voice-input"
path = "src/main.rs"
